force-app/main/default/objects/Exception_Log__c/Exception_Log__c.object-meta.xml
<CustomObject>
    <description>This object logs errors that happen during execution.</description>
    <label>Exception Log</label>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>Exception Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exception Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>