force-app/main/default/objects/Exception_Log__c/fields/Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Name__c</fullName>
    <description>Name of the Apex class that triggered this error.</description>
    <label>Class Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>