force-app/main/default/objects/Exception_Log__c/fields/Exception_Cause__c.field-meta.xml
<CustomField>
    <fullName>Exception_Cause__c</fullName>
    <description>Dispalys detailed cause of the exception if Exception_Cause_Override__c is null</description>
    <label>Exception Cause</label>
    <length>130000</length>
    <type>Html</type>
</CustomField>