force-app/main/default/objects/Exception_Log__c/fields/Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>Exception_Type__c</fullName>
    <description>The type of the exception that triggered this error log.</description>
    <label>Exception Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>