force-app/main/default/objects/Exception_Log__c/fields/Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>Stack_Trace__c</fullName>
    <description>Stores the stack trace from the exception</description>
    <label>Stack Trace</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>